

Slick 7.x-1.0-dev, 2014-08-2
----------------------------
Added support for Omega 3 expecting classes_array.
Do not output slide__media wrapper if no main image and caption available. The
  case, e.g., main image left empty, and overlay image/media filled out.

Slick 7.x-1.0-dev, 2014-07-25
-----------------------------
Added empty_option to Lazyload to allow sharing to Pinterest for small slides,
  since current Lazyload is a must, and img SRC attributes is always empty.

Slick 7.x-1.0-dev, 2014-07-24
-----------------------------
Issue #2308591 by jmuzz:
- Fixed for specificity of breakpoints states.
- Remove wasted breakpoint dependent options if disabled, even if not empty.
- Fixed CSS overriden checkboxes for admin settings.

Slick 7.x-1.0-dev, 2014-07-18
-----------------------------
Dropped slick-carousel.tpl.php, template_preprocess_slick_carousel() from
  slick.theme.inc
Dropped deprecated theme_slick_carousel() in favor of the unified theme_slick()
  for custom coded, Field formatter and Views for easy maintenance.

Slick 7.x-1.0-dev, 2014-07-13
-----------------------------
Added color_field support to Field Collection to colorize the slide text.
Fixed for Strict warning: Declaration of SlickViewsPluginStyleSlick::render()
  should be compatible with views_plugin_style::render() in
  _registry_check_code() (line 3139 ..., neglecting coder sniffs: "No scope
  modifier specified for function "render"
  [sniffer_squiz_scope_methodscope_missing]"
Added settings variables to template_preprocess_slick_item
Limit colorbox resize to non-images at slick.colorbox.js under onComplete.

Slick 7.x-1.0-dev, 2014-07-05
-----------------------------
Separated rules for slick.colorbox.css from slick.media.css
Started integration with Scald module as a separate project Scald Slick module.

Slick 7.x-1.0-dev, 2014-06-26
-----------------------------
Marked this feature complete for 1.3.6.
Added new options for future 1.3.7:
  - prevArrow
  - nextArrow